--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
             <tr>
               <td><%= site.name %></td>
               <td><%= site.url %></td>
-              <td><button type="button" class="btn btn-default"><%= site.status %></button></td>
+              <td><button type="button" class="btn btn-default"><%= site.status %><span class="glyphicon glyphicon-star"></span></button></td>
             </tr>
           <% end %>
         </tbody>
